--- a/.editorconfig
+++ b/.editorconfig
@@ -84,7 +84,7 @@ csharp_style_prefer_local_over_anonymous_function = true:suggestion
 dotnet_diagnostic.SA1600.severity = silent
 csharp_style_prefer_index_operator = true:suggestion
 csharp_style_prefer_range_operator = true:suggestion
-csharp_style_implicit_object_creation_when_type_is_apparent = true:suggestion
+csharp_style_implicit_object_creation_when_type_is_apparent = true:none
 csharp_style_prefer_tuple_swap = true:suggestion
 csharp_style_prefer_utf8_string_literals = true:suggestion
 csharp_style_inlined_variable_declaration = true:suggestion
@@ -110,6 +110,15 @@ dotnet_diagnostic.SA1134.severity = silent
 dotnet_diagnostic.SA1300.severity = silent
 dotnet_diagnostic.SA1302.severity = error
 csharp_space_around_binary_operators = before_and_after
+
+# IDE0090: Используйте "new(...)".
+dotnet_diagnostic.IDE0090.severity = none
+
+# IDE1006: Стили именования
+dotnet_diagnostic.IDE1006.severity = none
+
+# SA1200: Using directives should be placed correctly
+dotnet_diagnostic.SA1200.severity = none
 
 [*.vb]
 #### Стили именования ####
